# newm

./: .gitignore  .gitmodules  DEV.org  ENV_WAYLAND.md  LICENSE  PKGBUILD  README.md  SYSTEMD.md  TODO.org  env.sh  flake.nix  gdb-script  logcat.sh  main.py  main.sh  make.sh  meson.build  mypy.ini  newm-basic-lock-panel  newm-cmd  newm-panel-basic  requirements.txt  requirements_mypy.txt  setup.py  start-newm  valgrind.sh
.github/workflows/: mypy.yml
debug/: gdb-script  gdb.sh  valgrind.sh
dev/: DEV.org  TESTS.org  config_doc.py  env.sh
dev/nix/: install.sh  newm.nix  shell.nix
doc/: config.md  env_wayland.md  install_Arch_Linux.md  layout.md  look_and_feel.md  systemd.md  tips_and_tricks.md
include/: _pywm_callbacks.h  _pywm_view.h  wm.h  wm_cursor.h  wm_keyboard.h  wm_layout.h  wm_output.h  wm_pointer.h  wm_seat.h  wm_server.h  wm_view.h
include/py/: _pywm_callbacks.h  _pywm_view.h  _pywm_widget.h
include/wm/: wm.h  wm_config.h  wm_cursor.h  wm_keyboard.h  wm_layout.h  wm_pointer.h  wm_server.h  wm_view.h  wm_widget.h
main/: main.py
newm/: __init__.py  animate.py  auth_backend.py  basic_lock_panel.py  cmd.py  config.py  default_config.py  grid.py  hysteresis.py  interpolation.py  key_processor.py  layout.py  panel_endpoint.py  panel_launcher.py  run.py  state.py  sys_backend.py  util.py  view.py  workspace.py
newm/dbus/: __init__.py  auth.py  command.py  endpoint.py  gesture.py
newm/gestures/: __init__.py  gesture.py  gesture_listener.py  lowpass.py  lowpass_gesture.py
newm/gestures/provider/: __init__.py  c_gestures.py  provider.py  pyevdev_provider.py  pyevdev_touchpad.py
newm/helper/: __init__.py  backlight_manager.py  bar_display.py  execute.py  pactl.py  wob_runner.py
newm/overlay/: __init__.py  launcher_overlay.py  move_resize_floating_overlay.py  move_resize_overlay.py  overlay.py  overview_overlay.py  swipe_overlay.py  swipe_to_zoom_overlay.py
newm/resources/: newm.desktop
newm/widget/: __init__.py  background.py  background_blur.py  bar.py  corner.py  focus_border.py  ssd.py
newm_panel_basic/: __init__.py  launcher.py  lock.py
panel/: install_unsafe.sh  package-lock.json  package.json  start.sh
panel/launcher/: package.json
panel/launcher/public/: package.json
panel/launcher/src/: App.css  App.js  entries.js
panel/lock/: package.json
panel/lock/public/: package.json
panel/lock/src/: App.css  App.js
panel/notifiers/: package-lock.json  package.json
panel/notifiers/public/: package.json
panel/notifiers/src/: App.css  App.js  index.css
pywm/: __init__.py  pywm.py  pywm_background_widget.py  pywm_view.py  pywm_widget.py
src/: main.c  wm_cursor.c  wm_keyboard.c  wm_layout.c  wm_output.c  wm_pointer.c  wm_seat.c  wm_server.c  wm_view.c
src/py/: _pywm_callbacks.c  _pywm_view.c  _pywm_widget.c  _pywmmodule.c  _pywmmodule.h
src/wm/: wm.c  wm_config.c  wm_cursor.c  wm_keyboard.c  wm_layout.c  wm_output.c  wm_pointer.c  wm_seat.c  wm_server.c  wm_view.c  wm_widget.c
wm/: animate.py  background.py  bar.py  corner.py  grid.py  interpolation.py  key_processor.py  launcher_overlay.py  layout.py  lowpass.py  move_floating_overlay.py  move_resize_overlay.py  overlay.py  overview.py  overview_overlay.py  panel_endpoint.py  pinch_overlay.py  state.py  swipe_overlay.py  swipe_to_zoom_overlay.py  sys_backend.py  view.py
wm/overlay/: __init__.py  launcher_overlay.py  move_floating_overlay.py  move_resize_floating_overlay.py  move_resize_overlay.py  overlay.py  overview_overlay.py  swipe_overlay.py  swipe_to_zoom_overlay.py
wm/widget/: __init__.py  background.py  bar.py  corner.py
